# test-pyproject

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  make.ps1  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: GITFLOW.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: check-and-test.yml  pre-release-and-hotfix.yml  release.yml
docs/: index.md  modules.md
tests/: test_foo.py
