[project]
name = "test-pyproject"
version = "0.1.0"
description = "This is a template repository for Python projects that use uv for their dependency management."
authors = [{ name = "sandyowlet", email = "sandyowlet@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",

]

[project.urls]
Homepage = "https://sandyowlet.github.io/test-pyproject/"
Repository = "https://github.com/sandyowlet/test-pyproject"
Documentation = "https://sandyowlet.github.io/test-pyproject/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "commitizen",
    "deptry>=0.23.0",
    "mypy>=0.991",

    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"


[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture sys --verbose"

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = false
docstring-code-format = true


[tool.commitizen]

version_provider = "uv"
tag_format = "v$version"

[[tool.uv.index]]

name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://pypi.python.org/pypi"

[[tool.uv.index]]

name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
